--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +11,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1>Rokibul Hasan World</h1>
-    
+    <section>
+        <Div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Rokibul Hasan</span> World</h1>
+            <h3>Lorem Ipsum is simply dummy text . </h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-rokibul-hasan-805794133/">HIRE
+                ME</a>
+        </Div>
+        <Div class="half-width">
+            <img src="img/profile.png" alt="pic">
+        </Div>
+    </section>
+
 </body>
+
 </html>
