--- a/index.html
+++ b/index.html
@@ -29,6 +29,22 @@
         </Div>
     </section>
 
+    <section class="Dream-Big">
+        <div class="half-width">
+            <img src="img/profile-2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big </h1>
+            <h2>Full stack web developer</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries</p>
+
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
