--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <Div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Rokibul Hasan</span> World</h1>
@@ -29,7 +29,7 @@
         </Div>
     </section>
 
-    <section class="Dream-Big">
+    <section class="Dream-Big flexible-container">
         <div class="half-width">
             <img src="img/profile-2.png" alt="">
         </div>
@@ -45,6 +45,29 @@
         </div>
     </section>
 
+    <section class="experi-area">
+        <h1>EXperiences</h1>
+
+        <div class=" flexible-container">
+            <div id="full-stack" class="experi-item">
+                <h2>Full Stack Developer </h2>
+                <h3 class="orange">2019-present! pro level developer </h3>
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer
+                    took
+                    a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <div id="baby-web" class="experi-item">
+                <h2>Baby web Developer</h2>
+                <h3 class="orange">2014-present! Hero learner </h3>
+                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer
+                    took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
+<footer>
+    <p> @ Rokibul Hasan 2024 . cloud house crop.</p>
+</footer>
 
 </html>
